fixed overlapping html

--- a/Assets/css/receipe.css
+++ b/Assets/css/receipe.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
 }
 
-header, footer {
+header {
     background-color: #333;
     color: white;
     text-align: center;
@@ -52,10 +52,6 @@ input {
     margin-bottom: 10px;
 }
 
-.footer {
-    margin-top: auto;
-}
-=======
 #footer-container {
     color: white;
     text-align: center;
